--- a/src/Components/GameContainer/style.css
+++ b/src/Components/GameContainer/style.css
@@ -36,10 +36,17 @@ body {
   }
 
   .optionKey {
-    color: rgb(159, 19, 19);
+    background-color: rgb(224, 46, 46);
+    color: white;
     font-size: 48px;
     margin-bottom: -10vh;
     font-family: Helvetica;
+    width: 6vw;
+    border-radius: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
   }
   
   button {
@@ -106,4 +113,18 @@ background: linear-gradient(to right, #ffc500, #c21500); /* W3C, IE 10+/ Edge, F
   .nextRound {
     border-radius: 25px;
     padding: 10px 15px;
+  }
+
+  #startContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+  }
+
+  #startGame {
+    font-size: 24px;
+    padding: 10px 15px;
+    border-radius: 25px;
   }
