--- a/src/Components/GameContainer/style.css
+++ b/src/Components/GameContainer/style.css
@@ -37,7 +37,6 @@ body {
       margin: 0 auto;
       justify-content: center;
       gap: 3vw; /* Space between images */
-  
     }
 
     .options-container {
@@ -56,7 +55,45 @@ body {
     border: 1.2px solid white !important;
   }
 
+
+}
+
+@media (min-width: 770px) and (max-width: 1024px) {
+  
+  .profileImg {
+    border-radius: 50%;
+    width: 16vw;
+    height: 16vw;
+    border: 1px solid white;
   }
+
+  .images-container {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 88vw; /* Set maximum width to 70% of the viewport */
+    margin: 0 auto;
+    justify-content: center;
+    gap: 3vw; /* Space between images */
+  }
+  
+  .options-container {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 74vw !important;
+    margin: 0 auto;
+    justify-content: center;
+    gap: 6vw; /* Space between images */
+  }
+  .optionKey {
+    width: 13vw !important;
+    margin-bottom: -2vh !important;
+    font-size: 28px !important;
+    padding: 14px !important;
+    border: 1.2px solid white !important;
+    height: 6vh !important;
+  }
+}
+
 
   .game-container {
     text-align: center;
